--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,32 @@
- # .github/workflows/ci.yml
-
-name: CI Pipeline
+name: CI
 
 on:
   push:
-    branches: [ dev-branch ]
+    branches:
+      - dev-branch
   pull_request:
-    branches: [ dev-branch ]
+    branches:
+      - dev-branch
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3  # Update to the latest version
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4  # Update to the latest version
       with:
-        python-version: '3.x'
+        python-version: '3.9'  # Specify your desired Python version
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run Tests
+    - name: Run tests
       run: |
-        pytest
-
+        # Add your test commands here, e.g.:
+        python manage.py test
